--- a/pyUsercalc.ipynb
+++ b/pyUsercalc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib as mpl\n",
+    "mpl.rcParams['lines.linewidth']=2\n",
+    "mpl.rcParams['font.size']=16\n",
+    "## Some utility functions for plotting\n",
+    "\n",
+    "def plot_inputs(df,figsize=(8,6)):\n",
+    "    ''' pretty plots input data from pandas dataframe df\n",
+    "    '''\n",
+    "    \n",
+    "    fig, (ax1, ax2, ax3) = plt.subplots(1,3, sharey=True,figsize=figsize)\n",
+    "    ax1.plot(df['F'],df['P'])\n",
+    "    ax1.invert_yaxis()\n",
+    "    ax1.set_xlabel('F')\n",
+    "    ax1.set_ylabel('Pressure (kb)')\n",
+    "    xticks = np.linspace(0,max(df['F']),10)\n",
+    "    ax1.grid()\n",
+    "    ax1.set_xticks(xticks,minor=True)\n",
+    "    ax2.plot(df['Kr'],df['P'])\n",
+    "    ax2.set_xlabel('Kr')\n",
+    "    for s in ['DU','DTh','DRa','DPa']:\n",
+    "        ax3.semilogx(df[s],df['P'],label=s)\n",
+    "    ax3.set_xlabel('Ds')\n",
+    "    ax3.legend(loc='best',bbox_to_anchor=(1.1,1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's look at some data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('data/sample.csv',skiprows=1,dtype=float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_inputs(df)"
+   ]
   }
  ],
  "metadata": {
