Intermediate commit:  going to refactor out generic decay chain solver from UserCalc

--- a/pyUsercalc.ipynb
+++ b/pyUsercalc.ipynb
@@ -85,6 +85,8 @@
    "source": [
     "from scipy.optimize import brentq\n",
     "from scipy.interpolate import interp1d\n",
+    "from scipy.integrate import solve_ivp\n",
+    "\n",
     "\n",
     "class UserCalc:\n",
     "    ''' A class for constructing solutions for Equilibrium Transport U-series calculations\n",
@@ -130,7 +132,22 @@
     "        self.rho_s = 3300.\n",
     "        self.rho_f = 2800.\n",
     "        \n",
+    "        # set  decay constants for [ 238U, 230Th, 226Ra] and [ 235U, 231Pa ]       \n",
+    "        t_half_238 = np.array([4.468e9, 7.54e4, 1600.])\n",
+    "        t_half_235 = np.array([7.03e8, 3.276e4])\n",
+    "        self.lambdas_238 = np.log(2)/t_half_238\n",
+    "        self.lambdas_235 = np.log(2)/t_half_235\n",
     "        \n",
+    "        # set interpolation functions for Partition coefficients for each chain\n",
+    "        self.D_238 = [ interp1d(self.zp(df['P']),df['DU'],kind='cubic'),\n",
+    "                       interp1d(self.zp(df['P']),df['DTh'],kind='cubic'),\n",
+    "                       interp1d(self.zp(df['P']),df['DRa'],kind='cubic') ]\n",
+    "        self.D_235 = [ interp1d(self.zp(df['P']),df['DU'],kind='cubic'),\n",
+    "                       interp1d(self.zp(df['P']),df['DPa'],kind='cubic')]\n",
+    "        \n",
+    "        # lambda function to get partition coefficients at zprime = 0\n",
+    "        self.get_D0 = lambda D: np.array([ D[i](0) for i in range(len(D))])\n",
+    "                        \n",
     "        # initialize reference permeability\n",
     "        self.setAd(self.phi0,n=n)\n",
     "        \n",
@@ -141,6 +158,7 @@
     "            sets the reference permeability given the maximum porosity \n",
     "        '''\n",
     "        Fmax = self.Fmax\n",
+    "        self.phi0 = phi0\n",
     "        self.Ad =  (self.rho_s/self.rho_f*Fmax - phi0*(1. - Fmax)/(1. - phi0))/(phi0**n*(1.-phi0))\n",
     "        \n",
     "    def phi(self,zp):\n",
@@ -168,7 +186,88 @@
     "                f = lambda phi: K[i]*phi**self.n*(1. - phi)**2 + phi*(1. + F[i]*(rs_rf - 1.)) - F[i]*rs_rf\n",
     "                phi[i] = brentq(f,0.,1.)\n",
     "        return phi\n",
-    "                "
+    "                \n",
+    "    def F_bar_D(self,zp,D):\n",
+    "        '''\n",
+    "        returns  numpy array of  size (len(zp),len(D)) for\n",
+    "        \n",
+    "        Fbar_D = F + (1. - F)*D_i\n",
+    "        '''\n",
+    "        \n",
+    "        F = self.F(zp)\n",
+    "        F_bar_D = np.zeros((len(zp),len(D)))\n",
+    "        F_bar_D = np.array([ F + (1. - F)*D[i](zp) for i in range(len(D))])\n",
+    "        return F_bar_D\n",
+    "    \n",
+    "    def rho_bar_D(self,zp,D):\n",
+    "        '''\n",
+    "        returns  numpy array of  size (len(zp),len(D)) for\n",
+    "        \n",
+    "        rho_bar_D = rho_f*phi + rho_s(1. - phi)*D_i\n",
+    "        '''\n",
+    "        \n",
+    "        phi = self.phi(zp)\n",
+    "        rho_s = self.rho_s\n",
+    "        rho_f = self.rho_f\n",
+    "        rho_bar_D = np.zeros((len(zp),len(D)))\n",
+    "        rho_bar_D = np.array([ rho_f*phi + rho_s(1. - phi)*D[i](zp) for i in range(len(D))])\n",
+    "        return rho_bar_D\n",
+    "    \n",
+    "    def rhs(zp,Ur):\n",
+    "        '''\n",
+    "        returns right hand side of generic Decay chain problem for the log of the radiogenic concentration\n",
+    "        \n",
+    "        The full equation for dU/dz is given by Eq (9) in Spiegelman 2000 but here we split\n",
+    "        \n",
+    "        U = U^s + U^r where\n",
+    "        U^s is the log of the stable element concentrations U^s = log(D(0)/Fbar_z)\n",
+    "        U^r is the radiogenic ingrowth part\n",
+    "        \n",
+    "        the general equation is \n",
+    "            dU_i^r/dz = h\\lambda_i/Weff_i * [ R_i^{i-1} exp(U_{i-1} - U_i) - 1.)\n",
+    "            \n",
+    "        This routine assumes that lambda, D, D0, lambda_tmp, phi0, W_0 and alpha_0 are set by the driver routine\n",
+    "        '''\n",
+    "        \n",
+    "        # initial value of partition coefficients\n",
+    "        D0 = self.D0\n",
+    "        # stable concentrations\n",
+    "        Us = np.log(D0/F_bar_D(zp,self.D))\n",
+    "        # total concentration\n",
+    "        U = Us + Ur\n",
+    "        # effective velocity and scaled rate term\n",
+    "        w_eff = self.rho_s*self.W0*F_bar_d(zp,self.D)/rho_bar_D(zp,self.D)\n",
+    "        lambda_prime = self.h*self.lambdas/w_eff\n",
+    "        # ingrowth factor and exponential factor\n",
+    "        R = np.zeros(len(lambda_prime))\n",
+    "        expU = np.zeros(len(lambda_prime))\n",
+    "        for i in range(1,len(lambda_prime)):\n",
+    "            R[i] = self.alpha_0[i]*D0[i]/D0[i-1]*rho_bar_D(zp,self.D[i-1])/rho_bar_d(zp,self.D[i])\n",
+    "            expU[i] = np.exp(U[i-1]-U[i])\n",
+    "            \n",
+    "        # return full RHS\n",
+    "        \n",
+    "        return lambda_prime*(R*expU - 1.)\n",
+    "        \n",
+    "    def solve_decay_chain(phi0,n,W0,D,lambdas,alpha0):\n",
+    "        '''\n",
+    "        solves generic radioactive decay chain problem as an ODE initial value problem\n",
+    "        '''\n",
+    "        \n",
+    "        # initialize permeability, upwelling velocity and partition coefficients\n",
+    "        \n",
+    "        self.setAd(phi0,n)\n",
+    "        ## FIXME:  this always assumes W0 is in cm/yr, converts to km/yr\n",
+    "        self.W0 = W0/1.e5\n",
+    "        self.D = D\n",
+    "        self.D0 = self.get_D0(D)\n",
+    "        self.lambdas = lambdas\n",
+    "        self.alpha_0 = alpha0\n",
+    "        Ur_0 = np.zeros(len(D))\n",
+    "        \n",
+    "        return rhs(0.,Ur_0)\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -194,6 +293,13 @@
    "outputs": [],
    "source": [
     "plot_inputs(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## and some quick tests: plot F vs porosity"
    ]
   },
   {
@@ -223,11 +329,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "###  check RHS"
+   ]
   },
   {
    "cell_type": "code",
