Added A generic Decay chain solver class (seems to work)

--- a/pyUsercalc.ipynb
+++ b/pyUsercalc.ipynb
@@ -71,6 +71,139 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## A Generic Decay chain solver class\n",
+    "\n",
+    "This class solves a generic radiocative decay chain problem for the logarithm of the radiogenic component of  melt concentration (Equation 9) in Spiegelman 2000\n",
+    "\n",
+    "$$\n",
+    "    \\frac{dU_i^r}{dz} = \\lambda'_i\\frac{\\overline{\\rho D_{i}}}{\\overline{F D_{i}}}\\left[ R_i^{i-1}\\exp[U_{i-1}-U_i] - 1\\right]\n",
+    "$$\n",
+    "\n",
+    "where \n",
+    "$$\n",
+    "    \\lambda'_i = \\frac{h\\lambda_i}{W_0}\n",
+    "$$ \n",
+    "\n",
+    "are the decay constants scaled by the solid transport time ($h/W_0$) across a layer of depth $h$\n",
+    "$$\n",
+    "    \\overline{\\rho D_{i}} = \\frac{\\rho_f}{\\rho_s}\\phi + (1 -\\phi)D_i\n",
+    "$$\n",
+    "\n",
+    "is the partition coefficient weighted density (divided by $\\rho_s$)\n",
+    "and\n",
+    "$$\n",
+    "    \\overline{F D_{i}} = F + (1 -F)D_i\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "    R_i^{i-1} = \\alpha_i\\frac{D_i^0}{D_{i-1}^0}\\frac{\\overline{\\rho D_{i-1}}}{\\overline{\\rho D_{i-1}}}\n",
+    "$$\n",
+    "is the ingrowth factor. $\\alpha$ is the inital degree of secular disequilibrium.\n",
+    "\n",
+    "Note:  $U_i$ is the total log of the concentration of nuclide $i$ which can be decomposed into\n",
+    "$$\n",
+    "  U_i = U^s_i + U^r_i\n",
+    "$$\n",
+    "where\n",
+    "$$\n",
+    "    U^s_i = \\log\\left[ \\frac{D_i^0}{\\overline{FD}_i}\\right]\n",
+    "$$\n",
+    "is the log concentration of a stable nuclide with the same partition coefficients.  U^r_i is the radiogenic component."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.integrate import solve_ivp\n",
+    "\n",
+    "class DecayChain:\n",
+    "    '''\n",
+    "    A class for calculating generic radioactive decay chains for the scaled equations 9 in Spiegelman (2000)\n",
+    "    \n",
+    "    Usage:  solver=DecayChain(alpha0,D0,lambdas,F_bar,rho_bar)\n",
+    "    \n",
+    "    inputs:\n",
+    "        alpha0  :  numpy array of initial activities\n",
+    "        D0      :  numpy array of initial partition coefficients\n",
+    "        lambdas :  decay constants scaled by solid transport time\n",
+    "        F_bar   :  Function that returns F + (1-F)D as a function of z'\n",
+    "        rho_bar :  Function that returns \\rhof/rhos\\phi + (1-\\phi)D as a function of z'\n",
+    "        \n",
+    "    Outputs:  pandas DataFrame with columns z, U, U_s, U_r\n",
+    "    '''\n",
+    "    def __init__(self,alpha0,D0,lambdas,F_bar,rho_bar):\n",
+    "        self.alpha0 = alpha0\n",
+    "        self.D0 = D0\n",
+    "        self.lambdas = lambdas\n",
+    "        self.F_bar = F_bar\n",
+    "        self.rho_bar = rho_bar\n",
+    "        \n",
+    "    def rhs(self,z,Ur):\n",
+    "        '''\n",
+    "        returns right hand side of generic Decay chain problem for the log of the radiogenic concentration\n",
+    "        \n",
+    "        The full equation for dU/dz is given by Eq (9) in Spiegelman 2000 but here we split\n",
+    "        \n",
+    "        U = U^s + U^r where\n",
+    "        U^s is the log of the stable element concentrations U^s = log(D(0)/Fbar_z)\n",
+    "        U^r is the radiogenic ingrowth part\n",
+    "        \n",
+    "        the general equation is \n",
+    "            dU_i^r/dz = h\\lambda_i/Weff_i * [ R_i^{i-1} exp(U_{i-1} - U_i) - 1.)\n",
+    "            \n",
+    "        This routine assumes that lambda, D, D0, lambda_tmp, phi0, W_0 and alpha_0 are set by the driver routine\n",
+    "        '''\n",
+    "        \n",
+    "        # calculate F_bar(z) and rho_bar(z) once\n",
+    "        Fb = F_bar(z)\n",
+    "        rb = rho_bar(z)\n",
+    "        \n",
+    "        # initial value of partition coefficients\n",
+    "        D0 = self.D0\n",
+    "        # stable concentrations\n",
+    "        Us = np.log(D0/Fb)\n",
+    "        # total concentration\n",
+    "        U = Us + Ur\n",
+    "        # effective velocity and scaled rate term\n",
+    "        lambda_prime = self.lambdas*rb/Fb\n",
+    "        # ingrowth factor and exponential factor\n",
+    "        R = np.zeros(len(lambda_prime))\n",
+    "        expU = np.zeros(len(lambda_prime))\n",
+    "        for i in range(1,len(lambda_prime)):\n",
+    "            R[i] = self.alpha0[i]*D0[i]/D0[i-1]*rb[i-1]/rb[i]\n",
+    "            expU[i] = np.exp(U[i-1]-U[i])\n",
+    "            \n",
+    "        # return full RHS\n",
+    "        \n",
+    "        return lambda_prime*(R*expU - 1.)\n",
+    "        \n",
+    "    def solve(self,z_eval=None):\n",
+    "        '''\n",
+    "        solves generic radioactive decay chain problem as an ODE initial value problem\n",
+    "        if z_eval = None,  save every point\n",
+    "        else save output at every z_eval depth\n",
+    "        '''\n",
+    "        \n",
+    "        # Set initial condition and solve ODE      \n",
+    "        Ur_0 = np.zeros(len(self.D0))\n",
+    "        sol = solve_ivp(self.rhs,(0.,1.),Ur_0,t_eval=z_eval,method='RK45')\n",
+    "        z = sol.t\n",
+    "        Ur = sol.y\n",
+    "        # calculate stable concentration\n",
+    "        Us = np.log(self.D0/self.F_bar(z)).T \n",
+    "        return z,Ur,Us\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## The main UserCalc class\n",
     "\n",
     "This class takes in a dataframe of inputs,  initializes the appropriate splines and porosity functions\n",
@@ -85,7 +218,6 @@
    "source": [
     "from scipy.optimize import brentq\n",
     "from scipy.interpolate import interp1d\n",
-    "from scipy.integrate import solve_ivp\n",
     "\n",
     "\n",
     "class UserCalc:\n",
@@ -105,12 +237,13 @@
     "        Methods:\n",
     "            \n",
     "    '''\n",
-    "    def __init__(self, df, dPdz = 0.32373, n = 2., tol = 1.e-6, phi0 = 0.01):\n",
+    "    def __init__(self, df, dPdz = 0.32373, n = 2., tol = 1.e-6, phi0 = 0.01, W0 = 3.):\n",
     "        self.df = df\n",
     "        self.dPdz = dPdz\n",
     "        self.n = n\n",
     "        self.tol = 1.e-6\n",
     "        self.phi0 = phi0\n",
+    "        self.W0 = W0/1.e5\n",
     "        \n",
     "        # set depth scale h\n",
     "        self.zmin = df['P'].min()/dPdz\n",
@@ -195,78 +328,32 @@
     "        '''\n",
     "        \n",
     "        F = self.F(zp)\n",
-    "        F_bar_D = np.zeros((len(zp),len(D)))\n",
-    "        F_bar_D = np.array([ F + (1. - F)*D[i](zp) for i in range(len(D))])\n",
+    "        if np.isscalar(zp):\n",
+    "            F_bar_D = np.array([ F + (1. - F)*D[i](zp) for i in range(len(D))])\n",
+    "        else :\n",
+    "            F_bar_D = np.zeros((len(zp),len(D)))\n",
+    "            F_bar_D = np.array([ F + (1. - F)*D[i](zp) for i in range(len(D))]).T\n",
     "        return F_bar_D\n",
     "    \n",
     "    def rho_bar_D(self,zp,D):\n",
     "        '''\n",
     "        returns  numpy array of  size (len(zp),len(D)) for\n",
     "        \n",
-    "        rho_bar_D = rho_f*phi + rho_s(1. - phi)*D_i\n",
+    "        rho_bar_D = rho_f/rho_s*phi + (1. - phi)*D_i\n",
     "        '''\n",
-    "        \n",
-    "        phi = self.phi(zp)\n",
     "        rho_s = self.rho_s\n",
     "        rho_f = self.rho_f\n",
-    "        rho_bar_D = np.zeros((len(zp),len(D)))\n",
-    "        rho_bar_D = np.array([ rho_f*phi + rho_s(1. - phi)*D[i](zp) for i in range(len(D))])\n",
+    "        \n",
+    "        phi = self.phi(zp)\n",
+    "        if np.isscalar(zp):\n",
+    "            rho_bar_D = np.array([ rho_f/rho_s*phi + (1. - phi)*D[i](zp) for i in range(len(D))])\n",
+    "        else: \n",
+    "            rho_bar_D = np.zeros((len(zp),len(D)))\n",
+    "            rho_bar_D = np.array([ rho_f/rho_s*phi + (1. - phi)*D[i](zp) for i in range(len(D))]).T\n",
+    "           \n",
     "        return rho_bar_D\n",
     "    \n",
-    "    def rhs(zp,Ur):\n",
-    "        '''\n",
-    "        returns right hand side of generic Decay chain problem for the log of the radiogenic concentration\n",
-    "        \n",
-    "        The full equation for dU/dz is given by Eq (9) in Spiegelman 2000 but here we split\n",
-    "        \n",
-    "        U = U^s + U^r where\n",
-    "        U^s is the log of the stable element concentrations U^s = log(D(0)/Fbar_z)\n",
-    "        U^r is the radiogenic ingrowth part\n",
-    "        \n",
-    "        the general equation is \n",
-    "            dU_i^r/dz = h\\lambda_i/Weff_i * [ R_i^{i-1} exp(U_{i-1} - U_i) - 1.)\n",
-    "            \n",
-    "        This routine assumes that lambda, D, D0, lambda_tmp, phi0, W_0 and alpha_0 are set by the driver routine\n",
-    "        '''\n",
-    "        \n",
-    "        # initial value of partition coefficients\n",
-    "        D0 = self.D0\n",
-    "        # stable concentrations\n",
-    "        Us = np.log(D0/F_bar_D(zp,self.D))\n",
-    "        # total concentration\n",
-    "        U = Us + Ur\n",
-    "        # effective velocity and scaled rate term\n",
-    "        w_eff = self.rho_s*self.W0*F_bar_d(zp,self.D)/rho_bar_D(zp,self.D)\n",
-    "        lambda_prime = self.h*self.lambdas/w_eff\n",
-    "        # ingrowth factor and exponential factor\n",
-    "        R = np.zeros(len(lambda_prime))\n",
-    "        expU = np.zeros(len(lambda_prime))\n",
-    "        for i in range(1,len(lambda_prime)):\n",
-    "            R[i] = self.alpha_0[i]*D0[i]/D0[i-1]*rho_bar_D(zp,self.D[i-1])/rho_bar_d(zp,self.D[i])\n",
-    "            expU[i] = np.exp(U[i-1]-U[i])\n",
-    "            \n",
-    "        # return full RHS\n",
-    "        \n",
-    "        return lambda_prime*(R*expU - 1.)\n",
-    "        \n",
-    "    def solve_decay_chain(phi0,n,W0,D,lambdas,alpha0):\n",
-    "        '''\n",
-    "        solves generic radioactive decay chain problem as an ODE initial value problem\n",
-    "        '''\n",
-    "        \n",
-    "        # initialize permeability, upwelling velocity and partition coefficients\n",
-    "        \n",
-    "        self.setAd(phi0,n)\n",
-    "        ## FIXME:  this always assumes W0 is in cm/yr, converts to km/yr\n",
-    "        self.W0 = W0/1.e5\n",
-    "        self.D = D\n",
-    "        self.D0 = self.get_D0(D)\n",
-    "        self.lambdas = lambdas\n",
-    "        self.alpha_0 = alpha0\n",
-    "        Ur_0 = np.zeros(len(D))\n",
-    "        \n",
-    "        return rhs(0.,Ur_0)\n",
-    "\n",
+    "    \n",
     "    "
    ]
   },
@@ -332,7 +419,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  check RHS"
+    "### and let's try to solve U238 series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lambdas = u.h*u.lambdas_238/u.W0\n",
+    "print(lambdas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alphas = np.ones(3)\n",
+    "print(alphas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D0 = u.get_D0(u.D_238)\n",
+    "print(D0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "F_bar = lambda  z: u.F_bar_D(z,u.D_238)\n",
+    "rho_bar = lambda z: u.rho_bar_D(z,u.D_238)\n",
+    "z = 0.5\n",
+    "print(F_bar(z))\n",
+    "print(rho_bar(z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = np.linspace(0.,1.,10)\n",
+    "print(F_bar(z))\n",
+    "print(rho_bar(z))\n",
+    "plt.figure()\n",
+    "plt.plot(rho_bar(z)[:,1],z)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# put it together\n",
+    "us = DecayChain(alphas,D0,lambdas,F_bar,rho_bar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "us.rhs(0.,np.zeros(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z,Ur,Us = us.solve()\n",
+    "print(z.shape,Ur.shape,Us.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.plot(Ur.T,z,'r',label='U_r')\n",
+    "plt.plot(Us.T,z,'b',label='U_s')\n",
+    "plt.legend(loc='best')\n",
+    "plt.show()"
    ]
   },
   {
