Successfully created output data frame for both 238 and 235 model (really ugly code at the moment)

--- a/pyUsercalc.ipynb
+++ b/pyUsercalc.ipynb
@@ -159,8 +159,8 @@
     "        '''\n",
     "        \n",
     "        # calculate F_bar(z) and rho_bar(z) once\n",
-    "        Fb = F_bar(z)\n",
-    "        rb = rho_bar(z)\n",
+    "        Fb = self.F_bar(z)\n",
+    "        rb = self.rho_bar(z)\n",
     "        \n",
     "        # initial value of partition coefficients\n",
     "        D0 = self.D0\n",
@@ -354,6 +354,67 @@
     "        return rho_bar_D\n",
     "    \n",
     "    \n",
+    "    def solve_1D(self,phi0 ,n , W0, alphas = np.ones(4), z_eval = None):\n",
+    "        '''\n",
+    "        set's up and solves the 1-D column model for a given phi0,n, and upwelling rate W0 (in cm/yr)\n",
+    "        '''\n",
+    "    \n",
+    "        self.setAd(phi0,n)\n",
+    "        self.W0 = W0/self.h\n",
+    "        \n",
+    "        # evaluate at input depths in not specified\n",
+    "        if z_eval == None:\n",
+    "            z_eval = self.zp(self.df['P'])\n",
+    "                    \n",
+    "        # solve for the U238 model\n",
+    "        lambdas = self.h*self.lambdas_238/self.W0\n",
+    "        alpha0 = alphas[0:3]\n",
+    "        D0 = self.get_D0(self.D_238)\n",
+    "        F_bar = lambda  z: self.F_bar_D(z,u.D_238)\n",
+    "        rho_bar = lambda z: self.rho_bar_D(z,u.D_238)  \n",
+    "        \n",
+    "        us_238 = DecayChain(alpha0,D0,lambdas,F_bar,rho_bar)\n",
+    "        z,Ur,Us = us_238.solve(z_eval)\n",
+    "        U = Ur + Us\n",
+    "        \n",
+    "        # start building output dataframe\n",
+    "        df = pd.DataFrame()\n",
+    "        df['P'] = self.P(z) \n",
+    "        df['z'] = self.zmax - self.h*z\n",
+    "        df['F'] = self.F(z)\n",
+    "        df['phi'] = self.phi(z)\n",
+    "        names = ['(230Th/238U)','(226Th/230Th)']\n",
+    "        for i,name in enumerate(names):\n",
+    "            df[name] = alpha0[i+1]/alpha0[i]*D0[i]/D0[i+1]*np.exp(U[i+1]-U[i])\n",
+    "           \n",
+    "        names = ['U_238U','U_230Th', 'U_226Ra']\n",
+    "        for i,name in enumerate(names):\n",
+    "            df[name] = U[i]\n",
+    "            \n",
+    "        # now solve 235 series\n",
+    "        lambdas = self.h*self.lambdas_235/self.W0\n",
+    "        alpha0 = alphas[[0,3]]\n",
+    "        D0 = self.get_D0(self.D_235)\n",
+    "        F_bar = lambda  z: self.F_bar_D(z,u.D_235)\n",
+    "        rho_bar = lambda z: self.rho_bar_D(z,u.D_235)  \n",
+    "        \n",
+    "        us_235 = DecayChain(alphas,D0,lambdas,F_bar,rho_bar)\n",
+    "        z,Ur,Us = us_235.solve(z_eval)\n",
+    "        U = Ur + Us\n",
+    "        \n",
+    "        df['(231Pa/235U)'] = alpha0[1]/alpha0[0]*D0[0]/D0[1]*np.exp(U[1]-U[0])\n",
+    "        names = ['U_235U','U_231Pa']\n",
+    "        for i,name in enumerate(names):\n",
+    "            df[name] = U[i]\n",
+    "            \n",
+    "        # reorder the data frame\n",
+    "        columns = ['P','z','F','phi','(230Th/238U)','(226Th/230Th)','(231Pa/235U)',\n",
+    "                                    'U_238U','U_230Th', 'U_226Ra','U_235U','U_231Pa']\n",
+    "        \n",
+    "        \n",
+    "        return df[columns]\n",
+    "        \n",
+    "    \n",
     "    "
    ]
   },
@@ -420,6 +481,24 @@
    "metadata": {},
    "source": [
     "### and let's try to solve U238 series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_out = u.solve_1D(0.001,2.,3.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_out"
    ]
   },
   {
