Added output plotting:  works qualitatively but needs to be checked

--- a/pyUsercalc.ipynb
+++ b/pyUsercalc.ipynb
@@ -64,7 +64,26 @@
     "def plot_1Dcolumn(df,figsize=(8,6)):\n",
     "    '''\n",
     "        pretty plots output data from dataframe of output\n",
-    "    '''"
+    "    '''\n",
+    "    \n",
+    "    fig, (ax1, ax2) = plt.subplots(1,2, sharey=True,figsize=figsize)\n",
+    "    ax1.plot(df['phi'],df['P'],'r',label='$\\phi$')\n",
+    "    ax1.set_xlabel('Porosity',color='r')\n",
+    "    ax1.set_ylabel('Pressure (kb)')\n",
+    "    ax1.invert_yaxis()\n",
+    "\n",
+    "    ax1a = ax1.twiny()\n",
+    "    ax1a.plot(df['F'],df['P'],'b',label='$F$')\n",
+    "    ax1a.set_xlabel('Degree of melting',color='b')\n",
+    "\n",
+    "    for s in ['(230Th/238U)','(226Ra/230Th)','(231Pa/235U)']:\n",
+    "        ax2.plot(df[s],df['P'],label=s)\n",
+    "    ax2.set_xlabel('Activity Ratios')\n",
+    "    ax2.set_xlim(0,5)\n",
+    "    ax2.set_xticks(range(5))\n",
+    "    ax2.grid()\n",
+    "    ax2.legend(loc='best',bbox_to_anchor=(1.1,1))\n",
+    "    return fig,(ax1,ax1a,ax2)"
    ]
   },
   {
@@ -354,7 +373,7 @@
     "        return rho_bar_D\n",
     "    \n",
     "    \n",
-    "    def solve_1D(self,phi0 ,n , W0, alphas = np.ones(4), z_eval = None):\n",
+    "    def solve_1D(self,phi0 ,n , W0, alphas = np.ones(4), z_eval = 0.):\n",
     "        '''\n",
     "        set's up and solves the 1-D column model for a given phi0,n, and upwelling rate W0 (in cm/yr)\n",
     "        '''\n",
@@ -362,16 +381,16 @@
     "        self.setAd(phi0,n)\n",
     "        self.W0 = W0/self.h\n",
     "        \n",
-    "        # evaluate at input depths in not specified\n",
-    "        if z_eval == None:\n",
+    "        # evaluate at input depths if not specified\n",
+    "        if np.isscalar(z_eval):\n",
     "            z_eval = self.zp(self.df['P'])\n",
     "                    \n",
     "        # solve for the U238 model\n",
     "        lambdas = self.h*self.lambdas_238/self.W0\n",
     "        alpha0 = alphas[0:3]\n",
     "        D0 = self.get_D0(self.D_238)\n",
-    "        F_bar = lambda  z: self.F_bar_D(z,u.D_238)\n",
-    "        rho_bar = lambda z: self.rho_bar_D(z,u.D_238)  \n",
+    "        F_bar = lambda  z: self.F_bar_D(z,self.D_238)\n",
+    "        rho_bar = lambda z: self.rho_bar_D(z,self.D_238)  \n",
     "        \n",
     "        us_238 = DecayChain(alpha0,D0,lambdas,F_bar,rho_bar)\n",
     "        z,Ur,Us = us_238.solve(z_eval)\n",
@@ -383,7 +402,7 @@
     "        df['z'] = self.zmax - self.h*z\n",
     "        df['F'] = self.F(z)\n",
     "        df['phi'] = self.phi(z)\n",
-    "        names = ['(230Th/238U)','(226Th/230Th)']\n",
+    "        names = ['(230Th/238U)','(226Ra/230Th)']\n",
     "        for i,name in enumerate(names):\n",
     "            df[name] = alpha0[i+1]/alpha0[i]*D0[i]/D0[i+1]*np.exp(U[i+1]-U[i])\n",
     "           \n",
@@ -395,8 +414,8 @@
     "        lambdas = self.h*self.lambdas_235/self.W0\n",
     "        alpha0 = alphas[[0,3]]\n",
     "        D0 = self.get_D0(self.D_235)\n",
-    "        F_bar = lambda  z: self.F_bar_D(z,u.D_235)\n",
-    "        rho_bar = lambda z: self.rho_bar_D(z,u.D_235)  \n",
+    "        F_bar = lambda  z: self.F_bar_D(z,self.D_235)\n",
+    "        rho_bar = lambda z: self.rho_bar_D(z,self.D_235)  \n",
     "        \n",
     "        us_235 = DecayChain(alphas,D0,lambdas,F_bar,rho_bar)\n",
     "        z,Ur,Us = us_235.solve(z_eval)\n",
@@ -408,7 +427,7 @@
     "            df[name] = U[i]\n",
     "            \n",
     "        # reorder the data frame\n",
-    "        columns = ['P','z','F','phi','(230Th/238U)','(226Th/230Th)','(231Pa/235U)',\n",
+    "        columns = ['P','z','F','phi','(230Th/238U)','(226Ra/230Th)','(231Pa/235U)',\n",
     "                                    'U_238U','U_230Th', 'U_226Ra','U_235U','U_231Pa']\n",
     "        \n",
     "        \n",
@@ -447,7 +466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## and some quick tests: plot F vs porosity"
+    "### Solve the 1-D column problem"
    ]
   },
   {
@@ -456,31 +475,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# some quick tests\n",
+    "# initialze the solver object\n",
+    "us = UserCalc(df)\n",
     "\n",
-    "u = UserCalc(df)\n",
+    "# set column parameters\n",
+    "phi0 = 0.008\n",
+    "W0 = 3. # cm/yr\n",
+    "n = 2.\n",
     "\n",
-    "# plot degree of melting and porosity\n",
-    "z = np.linspace(0,1.,100)\n",
-    "\n",
-    "fig, ax1 = plt.subplots()\n",
-    "ax1.plot(u.phi(z),u.P(z),'r',label='$\\phi$')\n",
-    "ax1.set_xlabel('Porosity',color='r')\n",
-    "ax1.set_ylabel('Pressure (kb)')\n",
-    "ax1.invert_yaxis()\n",
-    "\n",
-    "\n",
-    "ax2 = ax1.twiny()\n",
-    "ax2.plot(u.F(z),u.P(z),'b',label='$F$')\n",
-    "ax2.set_xlabel('Degree of melting',color='b')\n",
-    "plt.show()\n"
+    "# and solve at 100 points\n",
+    "z_solve = np.linspace(0,1,100)\n",
+    "df_out = us.solve_1D(phi0,n,W0,z_eval = z_solve)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### and let's try to solve U238 series"
+    "## activities at the top of the column"
    ]
   },
   {
@@ -489,7 +501,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_out = u.solve_1D(0.001,2.,3.)"
+    "print(df_out[['(230Th/238U)','(226Ra/230Th)','(231Pa/235U)']].iloc[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_1Dcolumn(df_out)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## view dataframe"
    ]
   },
   {
@@ -500,112 +536,6 @@
    "source": [
     "df_out"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lambdas = u.h*u.lambdas_238/u.W0\n",
-    "print(lambdas)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "alphas = np.ones(3)\n",
-    "print(alphas)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "D0 = u.get_D0(u.D_238)\n",
-    "print(D0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "F_bar = lambda  z: u.F_bar_D(z,u.D_238)\n",
-    "rho_bar = lambda z: u.rho_bar_D(z,u.D_238)\n",
-    "z = 0.5\n",
-    "print(F_bar(z))\n",
-    "print(rho_bar(z))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z = np.linspace(0.,1.,10)\n",
-    "print(F_bar(z))\n",
-    "print(rho_bar(z))\n",
-    "plt.figure()\n",
-    "plt.plot(rho_bar(z)[:,1],z)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# put it together\n",
-    "us = DecayChain(alphas,D0,lambdas,F_bar,rho_bar)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "us.rhs(0.,np.zeros(3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z,Ur,Us = us.solve()\n",
-    "print(z.shape,Ur.shape,Us.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.plot(Ur.T,z,'r',label='U_r')\n",
-    "plt.plot(Us.T,z,'b',label='U_s')\n",
-    "plt.legend(loc='best')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
