--- a/pyUsercalc.ipynb
+++ b/pyUsercalc.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# pyUsercalc\n",
+    "# pyUserCalc\n",
     "\n",
     "A jupyter notebook that attempts to recreate most of the functionality of Spiegelman's [UserCalc](http://www.ldeo.columbia.edu/~mspieg/UserCalc) website for calculating Uranium Series disequilibrium calculations for the Equilbrium transport model describe in \n",
     "\n",
