Changed solver to BDF * a little faster than Radau * added some timing routines

--- a/pyUsercalc.ipynb
+++ b/pyUsercalc.ipynb
@@ -247,7 +247,7 @@
     "        \n",
     "        # Set initial condition and solve ODE      \n",
     "        Ur_0 = np.zeros(len(self.D0))\n",
-    "        sol = solve_ivp(self.rhs,(0.,1.),Ur_0,t_eval=z_eval,method='Radau')\n",
+    "        sol = solve_ivp(self.rhs,(0.,1.),Ur_0,t_eval=z_eval,method='BDF')\n",
     "        z = sol.t\n",
     "        Ur = sol.y\n",
     "        # calculate stable concentration\n",
@@ -683,7 +683,11 @@
     "phi0 = np.logspace(-3,-1,11)\n",
     "W0 = np.logspace(-1,1,11)\n",
     "n = 2.\n",
-    "act = us.solve_grid(phi0, n, W0, us.D_238, us.lambdas_238 )"
+    "import time\n",
+    "tic = time.clock()\n",
+    "act = us.solve_grid(phi0, n, W0, us.D_238, us.lambdas_238 )\n",
+    "toc = time.clock()\n",
+    "print('\\nelapsed time={}'.format(toc-tic))"
    ]
   },
   {
