--- a/pyUsercalc.ipynb
+++ b/pyUsercalc.ipynb
@@ -247,7 +247,7 @@
     "        \n",
     "        # Set initial condition and solve ODE      \n",
     "        Ur_0 = np.zeros(len(self.D0))\n",
-    "        sol = solve_ivp(self.rhs,(0.,1.),Ur_0,t_eval=z_eval,method='BDF')\n",
+    "        sol = solve_ivp(self.rhs,(0.,1.),Ur_0,t_eval=z_eval,method='Radau')\n",
     "        z = sol.t\n",
     "        Ur = sol.y\n",
     "        # calculate stable concentration\n",
@@ -716,6 +716,13 @@
    "source": [
     "plot_contours(phi0,W0,act_235,figsize=(8,8))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -734,7 +741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
