Fixed a minor bug in UserCalc.py

--- a/pyUserCalc_manuscript_2020-05-18.ipynb
+++ b/pyUserCalc_manuscript_2020-05-18.ipynb
@@ -194,7 +194,7 @@
     "\\frac{d}{dz} \\rho_f \\phi w &= \\Gamma(z) \\\\\n",
     "\\frac{d}{dz} \\rho_s (1-\\phi) W &= -\\Gamma(z) \\\\\n",
     "\\frac{d}{dz} \\rho_f \\phi w c_i^f(z) &= \\frac{c_i^s(z)}{D_i(z)}\\Gamma(z) - R_{factor}(c_i^f(z) - \\frac{c_i^s(z)}{D_i(z)})   \\\\\n",
-    "\\frac{d}{dz} \\rho_s (1-\\phi) W c_i^s(z) &=  - \\frac{c_i^s(z)}{D_i(z)}\\Gamma(z) + R_{factor}|(c_i^f(z) - \\frac{c_i^s(z)}{D_i(z)})  \\\\\n",
+    "\\frac{d}{dz} \\rho_s (1-\\phi) W c_i^s(z) &=  - \\frac{c_i^s(z)}{D_i(z)}\\Gamma(z) + R_{factor}(c_i^f(z) - \\frac{c_i^s(z)}{D_i(z)})  \\\\\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
@@ -405,11 +405,12 @@
     "        \n",
     "    Outputs:  pandas DataFrame with columns z, Us, Uf\n",
     "    '''      \n",
-    "    def __init__(self,alpha0,lambdas,D,F,dFdz,phi,Rfact,rho_f=2800., rho_s=3300.,method='Radau'):\n",
+    "    def __init__(self,alpha0,lambdas,D,W0,F,dFdz,phi,Rfact,rho_f=2800., rho_s=3300.,method='Radau'):\n",
     "        self.alpha0 = alpha0\n",
     "        self.N = len(alpha0)\n",
     "        self.D = D\n",
     "        self.D0 = np.array([D[i](0.) for i in range(self.N)])\n",
+    "        self.W0 = W0\n",
     "        self.lambdas = lambdas\n",
     "        self.F  = F\n",
     "        self.dFdz = dFdz\n",
@@ -814,8 +815,8 @@
    "outputs": [],
    "source": [
     "from UserCalc import UserCalc\n",
-    "us = UserCalc(EquilTransport,df)\n",
-    "#us = UserCalc(DisequilTransport,df)\n",
+    "#us = UserCalc(EquilTransport,df)\n",
+    "us = UserCalc(DisequilTransport,df)\n",
     "\n",
     "# Maximum melt porosity:\n",
     "phi0 = 0.008\n",
@@ -1215,7 +1216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
