Final? cleanup for pyUserCalc master branch * reorganized manuscript into latex directory * removed binary zip file * updated README.md to describe contents * renamed main manuscript * removed pdf file from main directory and keep one version in latex dir

--- a/pyUserCalc-v3.1.ipynb
+++ b/pyUserCalc-v3.1.ipynb
@@ -154,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "UserCalc.plot_inputs(df)"
+    "fig = UserCalc.plot_inputs(df)"
    ]
   },
   {
@@ -445,9 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Equilibrium model results figure:\n",
@@ -459,9 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Pure disequilibrium model results figure:\n",
@@ -473,9 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Scaled disequilibrium model results figure:\n",
@@ -728,9 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Equilibrium grid plots for U-Pa chain:\n",
@@ -756,9 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Pure disequilibrium grid plots for U-Pa chain:\n",
@@ -784,9 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Scaled disequilibrium grid plots for U-Pa chain:\n",
@@ -795,13 +783,6 @@
     "    plt.title('Disequilibrium transport, Da = {}'.format(us_diseqda.Da),y=1.1)\n",
     "    plt.savefig(\"{}/{}_grid_Pa_Th_diseq_Da={}.pdf\".format(runname,runname,us_diseqda.Da),transparent=True,dpi=300,bbox_inches='tight')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -820,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
