Revised to add data availability statement

--- a/latex/pyUserCalc_manuscript_2020-12-17.tex
+++ b/latex/pyUserCalc_manuscript_2020-12-17.tex
@@ -1803,6 +1803,11 @@ We present pyUserCalc, an expanded, publicly available, open-source version of t
 
 We thank K.W.W. Sims and P. Kelemen for initiating early discussions about creating a new porous flow disequilibrium transport calculator back in 2008. We also thank M. Ghiorso for inviting L. Elkins to join the ENKI working group and thereby catalyzing this fresh effort, and we further thank the working group for their helpful suggestions and feedback. L. Elkins received ENKI working group travel assistance that contributed to this research effort, and was supported by NSF award OCE-1658011.
 
+    \hypertarget{data-availability-statement}{%
+\section*{Data Availability Statement}\label{data-availability-statement}}
+
+The data set for this research consists of a code package, which is available in several ways: 1) in the supporting information, 2) through a binder container (at https://mybinder.org/v2/gl/ENKI-portal\%2FpyUsercalc/master?filepath=pyUserCalc\_manuscript.ipynb), and 3) in the ENKI GitLab data repository (https://gitlab.com/ENKI-portal/pyUsercalc), which can also be accessed at the ENKI cloud server (https://server.enki-portal.org/hub/login) with a free GitLab account (register at https://gitlab.com/ENKI-portal).
+
     \hypertarget{references}{%
 \section*{References}\label{references}}
 
