Revised to add data availability statement

--- a/pyUserCalc_manuscript.ipynb
+++ b/pyUserCalc_manuscript.ipynb
@@ -3226,6 +3226,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Availability Statement\n",
+    "The data set for this research consists of a code package, which is available in several ways: 1) in the supporting information, 2) through a binder container (at https://mybinder.org/v2/gl/ENKI-portal%2FpyUsercalc/master?filepath=pyUserCalc_manuscript.ipynb), and 3) in the ENKI GitLab data repository (https://gitlab.com/ENKI-portal/pyUsercalc), which can also be accessed at the ENKI cloud server (https://server.enki-portal.org/hub/login) with a free GitLab account (register at https://gitlab.com/ENKI-portal)."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
